css/index.css
/*
--------------------------------------------------
name: UI Styles
path: /css/index.css
--------------------------------------------------
*/

:root {
  --color-main: hsla(190, 80%, 50%, 1);
  --color-dark-900: #010101; /* black */
  --color-dark-800: #1F2023; /* bg */
  --color-dark-700: #27292D; /* element bg */
  --color-dark-600: #383B40; /* ui elements */
  --color-dark-500: #FFFFFF99; /* 60% */
  --color-dark-400: #FFFFFFB3; /* 70% */
  --color-dark-300: #FFFFFFCC; /* 80% */
  --color-dark-200: #FFFFFFE6; /* 90% text */
  --color-dark-100: #FFFFFF; /* bold */
  --radius: 5px;
  --shadow: 0 1px 3px 0 rgba(0,0,0,.1),0 1px 2px 0 rgba(0,0,0,.06);
}

@font-face {
  font-family: 'Dank Mono Regular';
  src: url('/fonts/Dank_Mono_Regular.woff2') format('woff2');
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Dank Mono Italic';
  src: url('/fonts/Dank_Mono_Italic.woff2') format('woff2');
  font-weight: 400;
  font-style: italic;
  font-display: swap;
}

body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  background-color: var(--color-dark-800);
  color: var(--color-dark-200);
}

a {
  color: var(--color-dark-200);
}

h1,
h2,
h3,
h4,
h5,
h6,
strong {
  font-weight: 600;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  line-height: 1.25;
}

code {
  font-family: 'Dank Mono Regular', monospace;
}

/*      scrollbar      */

html {
  overflow-y: scroll;
}

/* chrome & safari */
*::-webkit-scrollbar {
  width: 10px;
  height: 10px;
  background-color: var(--color-dark-800);
}

*::-webkit-scrollbar-thumb {
  background-color: var(--color-dark-600);
  border-radius: 9999px;
  border: 2px solid var(--color-dark-800);
}

/* firefox */
* {
  scrollbar-color: var(--color-dark-600) var(--color-dark-800);
  scrollbar-width: thin;
}

/*      select      */
*::selection {
  background-color: hsla(190, 80%, 50%, 0.35);
}

.list,
.post,
.post .content {
  width: 95%;
  margin: 0 auto;
}

.post,
.list {
  max-width: 1200px;
}

.post .content {
  max-width: 750px;
}

.items {
  /* responsive grid */
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(calc(300px - 1rem), 1fr));
  grid-auto-rows: minmax(calc(200px - 1rem), auto);
  grid-gap: 1rem;

  margin-bottom: 1rem;
}

.item {
  /* make whole card clickable */
  display: flex;
  height: 100%;

  /* push title on top and date on bottom */
  flex-direction: column;
  justify-content: space-between;

  /* translate content from border */
  padding: .75rem 1rem;


  box-shadow: var(--shadow);
  background-color: var(--color-dark-700);
  border-radius: var(--radius);
}

.item h2 {
  font-size: 1.6rem;
}

.item h2,
.item h3 {
  font-weight: 500;
}

.item:focus {
  outline: none;
  box-shadow:0 0 0 3px var(--color-dark-200);
}

nav.normal {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin: 2rem 0.1rem 1.5rem 0.1rem;
}

#menu,
.menu_icon {
  display: none;
}

@media screen and (max-width: 700px) {
  nav.normal {
    flex-wrap: wrap;
    margin: 1rem 0.1rem;
  }

  nav.normal h1 {
    display: none;
  }

  nav.normal .menu_icon {
    display: block;
    flex-basis: 3.2rem;
  }

  nav.normal .menu_icon > svg {
    margin-left: 1rem;
  }

  nav.normal .search_wrapper {
    flex-basis: calc(100% - 3.2rem);
  }

  nav.normal .icons {
    opacity: 0;
    transform: translateY(-20px);
    pointer-events: none;
    transition: opacity 0.2s ease-out, transform 0.2s ease-out;
    position: absolute;
    right: 2.5%;
    top: 4.5rem;
    flex-direction: column;
    width: auto;
    border-radius: var(--radius);
    box-shadow: var(--shadow);
    background: var(--color-dark-700);
    padding: 0.3rem;
  }

  nav.normal .icons > * {
    padding: 0.3rem;
  }

  nav.normal .email {
    margin-left: 0;
  }

  nav.normal #menu:checked ~ .icons {
    opacity: 1;
    transform: translateY(0);
    pointer-events: all;
  }

  nav.normal #menu:checked ~ .menu_icon .icon {
    transition: all .75s;
    stroke: var(--color-main);
  }
}

.icon {
  stroke: #e5e5e5;
  display: block;
  height: 1.75rem;
}

.logo {
  height: 2.6rem;
}

.email {
  margin-left: 0.12rem;
}

nav a svg,
.icon {
  transition: all .75s;
}

nav a:focus svg,
.icon:hover {
  stroke: var(--color-main);
}

nav.breadcrumbs {
  margin-left: 0.1rem;
  margin-bottom: 0.5rem;
}

nav.breadcrumbs,
nav.breadcrumbs * {
  transition: all .75s;
  color: var(--color-dark-400);
}

/* breadcrumb arrows */
nav.breadcrumbs .arrow {
  color: var(--color-dark-500);
}

nav.breadcrumbs a:hover,
nav.breadcrumbs a:focus {
  color: var(--color-main);
}

.breadcrumb_current::before {
  content: "You are here";
  position: absolute;
  transition: all 0.5s;
  opacity: 0;
  border-radius: var(--radius);
  padding: 0.1rem 0.4rem;
  color: var(--color-dark-300);
  background-color: var(--color-dark-700);
}

.breadcrumb_current:hover::before {
  opacity: 1;
  transform: translateY(1.55rem);
}

nav *:focus {
  outline: none;
}

.icons {
  width: 110px;
  display: flex;
  justify-content: space-between;
}

/* banner */
nav.root {
  margin: 2rem 0.1rem;
  display: flex;
}

.logo.root {
  height: 12rem;
}

nav.root > section.main {
  flex-grow: 1;
  margin: 0.1rem 0;
  display: flex;
  flex-direction: column;
  align-items: center;
}

nav.root .description {
  flex-grow: 1;
  font-size: 1.1rem;
  color: var(--color-dark-300);
  margin: 0.75rem 20%;
  text-align: justify;
}

nav.root .icons {
  width: auto;
  height: 105px;
  flex-direction: column;
  align-self: center;
}

/* search */

#search {
  font-size: 2rem;
  padding: 0 0.6rem;
  width: 100%;
  border: none;
  border-radius: var(--radius);
  box-shadow: var(--shadow);
  color: var(--color-dark-200);
  background-color: var(--color-dark-700);
}

#search::placeholder {
  color: var(--color-dark-500)
}

.root {
  display: flex;
}

.search_wrapper {
  position: relative;
  width: 450px;
}

/* fix placeholder color in firefox */
input::-moz-placeholder {
  opacity: 1;
}

/* remove X from search input in Chrome */
input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration { display: none; }

#results {
  list-style: none;
  position: absolute;
  width: 100%;
  margin: 0;
  padding: 0;
  z-index: 99999;
  margin-top: 0.5rem;
  background-color: var(--color-dark-700);
  border-radius: var(--radius);
  box-shadow: var(--shadow);
}

.result {
  height: 2.5rem;
}

.result.selected {
  background-color: var(--color-main);
  border-radius: var(--radius);
  box-shadow: var(--shadow);
}

.hidden {
  display: none;
}

.result a {
  display: block;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  padding: 0 0.75rem;
}

.result.selected a {
  color: var(--color-dark-700);
}

